# frame

./: CLAUDE.md  Cargo.toml  ROADMAP.md  SPIKE-FINDINGS.md
.claude/skills/plan-first/: SKILL.md
src/: capture.rs  editor.rs  indicator.rs  main.rs  monitor.rs  output.rs  overlay.rs  qao.rs  scroll.rs  sock.rs  window.rs
