[package]
name = "frame"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
jiff = "0.2.32"
memmap2 = "0.9.11"
rustix = { version = "1.1.4", features = ["fs"] }
tiny-skia = "0.12.0"
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
wl-clipboard-rs = "0.9.3"
