[package]
name = "frame"
version = "0.1.0"
edition = "2024"

[dependencies]
# Defaults would pull `x11` (against the Wayland-first rule) and `web_screen_reader`
# (native-only binary), so features are named explicitly. `persistence` is not a
# default and stays off: `frame` writes no window-state files.
eframe = { version = "0.35.0", default-features = false, features = [
    "default_fonts",
    "wayland",
    "wgpu",
] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
jiff = "0.2.32"
memmap2 = "0.9.11"
rustix = { version = "1.1.4", features = ["fs"] }
tiny-skia = "0.12.0"
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
wl-clipboard-rs = "0.9.3"
